--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+  <script src="assets/js/recorder.js"></script>
+
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
