add support for video

--- a/src/pages/video/video.html
+++ b/src/pages/video/video.html
@@ -26,5 +26,5 @@
   <ion-item class="ion-item" no-lines>
     <ion-label color="primary" stacked>提示：上传视频生成专属表情包视频！</ion-label>
   </ion-item>
-  <button class="button2" ion-button color="secondary" full no-margin>选择上传</button>
+  <button class="button2" ion-button color="secondary" full no-margin (click)="videoRecording()">开始拍摄</button>
 </ion-content>
