--- a/src/pages/audio/audio.html
+++ b/src/pages/audio/audio.html
@@ -15,26 +15,6 @@
 
 <ion-content padding>
 
-  <ion-card>
-    <ion-card-content>
-      <button ion-button block (click)="startRecording()" color="secondary">  START RECORD </button>
-      <button ion-button block (click)="stopRecording()" color="danger">     STOP RECORD  </button>
-    </ion-card-content>
-  </ion-card>
-  <ion-card>
-    <ion-card-content>
-      <button ion-button icon-only block color="dark" (click)="play()">
-        <ion-icon name="play"></ion-icon>
-      </button>
-      <button ion-button icon-only block color="dark" (click)="pause()">
-        <ion-icon name="pause"></ion-icon>
-      </button>
-      <button ion-button icon-only block color="dark" (click)="stop()">
-        <ion-icon name="square"></ion-icon>
-      </button>
-    </ion-card-content>
-  </ion-card>
-
   <ion-card class="ion-card">
     <img class="ion-card-img" [src]="defaultImg" (press)="onHold()"/>
   </ion-card>
@@ -43,11 +23,10 @@
     <ion-label color="primary" stacked>提示：点击开始，语音匹配专属表情！</ion-label>
   </ion-item>
   <section>
-    <button class="button2" ion-button color="secondary" full no-margin *ngIf="!isClicked" (click)="record()">点击说话</button>
+    <button class="button2" ion-button color="secondary" full no-margin *ngIf="!isClicked" (click)="startRecording()">点击说话</button>
   </section>
   <section>
-    <button class="button2" ion-button color="danger" full no-margin *ngIf="isClicked" (click)="record()">点击结束</button>
+    <button class="button2" ion-button color="danger" full no-margin *ngIf="isClicked" (click)="stopRecording()">点击结束</button>
   </section>
-
 
 </ion-content>
