--- a/src/pages/audio/audio.html
+++ b/src/pages/audio/audio.html
@@ -17,7 +17,7 @@
   <ion-card class="ion-card">
     <img class="ion-card-img" [src]="defaultImg" (press)="onHold()"/>
   </ion-card>
-  <button id="button1" ion-button color="secondary" round small >生成</button>
+  <!--<button id="button1" ion-button color="secondary" round small >生成</button>-->
   <ion-item class="ion-item" no-lines>
     <ion-label color="primary" stacked>提示：点击开始，语音匹配专属表情！</ion-label>
   </ion-item>
